# lfmc

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  dependencies.txt  galileo  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yaml
data/: config  models
docs/: experiments.md  setup.md
experiment/: beaker_args.py  beaker_finetune.py  beaker_h5pys.py
lfmc/core/: bands.py  const.py  copy.py  dataset.py  encoder_loader.py  eval.py  filter.py  finetuning.py  hyperparameters.py  labels.py  mode.py  padding.py  splits.py
lfmc/main/: analyze_csv.py  augment_labels.py  create_csv.py  create_h5pys.py  finetune_model.py
tests/: conftest.py
tests/core/: test_bands.py  test_copy.py  test_dataset.py  test_eval.py  test_padding.py  test_splits.py
tests/data/tifs/: 107584.tif  124659.tif  132586.tif  141426.tif  141954.tif  146009.tif  151934.tif  168688.tif  224299.tif  271394.tif  README.md
